--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bounce {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.dot {
+  background-color: #a9a9a9;
+  border-radius: 50%;
+  width: 6px;
+  height: 6px;
+  margin: 3px;
+  animation-fill-mode: both;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.dot:nth-child(1) {
+  animation-name: bounce;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-delay: 0.2s;
+}
+
+.dot:nth-child(2) {
+  animation-name: bounce;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-delay: 0.4s;
+}
+
+.dot:nth-child(3) {
+  animation-name: bounce;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-delay: 0.6s;
+}
+
+@keyframes bounce {
+  0%,
+  80%,
+  100% {
+    transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  40% {
+    transform: translateY(-30px);
   }
 }
